fix: Improve spacing and hierarchy of content pages.

--- a/app/styles/app.pcss
+++ b/app/styles/app.pcss
@@ -21,20 +21,20 @@ a:focus {
 }
 
 h1 {
-    @apply text-gray-700 text-2xl leading-tight mb-2;
+    @apply text-gray-700 text-3xl leading-tight mb-4;
 }
 
 h2 {
-    @apply text-gray-700 text-xl leading-tight mb-1 mt-8;
+    @apply text-gray-700 text-2xl leading-tight mb-4 mt-12;
 }
 
 p {
-    @apply mb-2;
+    @apply mb-4;
 }
 
 /* Use for intro paragraphs of text. */
 .intro {
-    @apply text-lg text-gray-700 text-opacity-75 mb-10;
+    @apply text-lg text-gray-700 text-opacity-75 mb-12 mt-6;
 }
 
 /* Navigation links */
